--- a/tunerstudio/tunerstudio.template.ini
+++ b/tunerstudio/tunerstudio.template.ini
@@ -555,6 +555,14 @@ enable2ndByteCanID = false
 		xBins		= cltFuelCorrBins, coolant
 		yBins		= cltFuelCorr
 		gauge		= CLTGauge
+		
+	curve = egtFuelCorrCurve, "EGT1 Multiplier"
+		columnLabel = "EGT1", "Multiplier"
+		xAxis		=  0, 1200, 9
+		yAxis		=  0,  3, 10
+		xBins		= egtFuelCorrBins, egt1
+		yBins		= egtFuelCorr
+		gauge		= egt1Gauge
 
 	curve = cltBoostCorrCurve, "Coolant Temperature Boost Duty Multiplier"
 		columnLabel = "Coolant", "Multiplier"
@@ -611,6 +619,14 @@ enable2ndByteCanID = false
 		xBins		= cltRevLimitRpmBins, coolant
 		yBins		= cltRevLimitRpm
 		gauge		= CLTGauge
+		
+	curve = oilTempRevLimitCurve, ""
+		columnLabel = "Oil temp", "RPM Limit"
+		xAxis		= -10, 150, 9
+		yAxis		= 0, 8000, 9
+		xBins		= oilTempRevLimitRpmBins, oilTemp
+		yBins		= oilTempRevLimitRpm
+		gauge		= oilTempGauge
 
 	curve = etbTpsBiasCurve, "Electronic TB Bias Curve"
 		columnLabel = "TPS", "duty bias"
@@ -988,19 +1004,19 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins		= tpsTpsAccelToRpmBins,  tpsTo
 		zBins		= tpsTpsAccelTable
 
-		table = tractionEtbTableTbl,  tractionEtb,  "Traction Control ETB drop",	1
-		xBins		= tractionControlSpeedBins,  vehicleSpeedKph
-		yBins		= tractionControlSlipBins,  wheelSlipRatio
+		table = tractionEtbTableTbl,  tractionEtb,  "Traction Control ETB Drop",	1
+		xBins		= tractionControlSpeedBins,  TPSValue
+		yBins		= tractionControlSlipBins,  ascReduction
 		zBins		= tractionControlEtbDrop
 
-		table = tractionTimingTableTbl,  tractionEtb,  "Traction Control Timing drop",	1
-		xBins		= tractionControlSpeedBins,  vehicleSpeedKph
-		yBins		= tractionControlSlipBins,  wheelSlipRatio
+		table = tractionTimingTableTbl,  tractionEtb,  "Traction Control Timing Adjustment",	1
+		xBins		= tractionControlSpeedBins,  TPSValue
+		yBins		= tractionControlSlipBins,  ascReduction
 		zBins		= tractionControlTimingDrop
 
-		table = tractionIgnitionSkipTableTbl,  tractionEtb,  "Traction Control Skip Ignition",	1
-		xBins		= tractionControlSpeedBins,  vehicleSpeedKph
-		yBins		= tractionControlSlipBins,  wheelSlipRatio
+		table = tractionIgnitionSkipTableTbl,  tractionEtb,  "Traction Control Spark Skip",	1
+		xBins		= tractionControlSpeedBins,  TPSValue
+		yBins		= tractionControlSlipBins,  ascReduction
 		zBins		= tractionControlIgnitionSkip
 
 	table = boostTableTbl,  boostMapOpen,  "Boost control duty cycle (open loop)",	1
@@ -1014,16 +1030,20 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins		= boostLoadBins,  TPSValue
 		zBins		= boostTableClosedLoop
 
-	table = vvtTable1Tbl,  vvtTable1Map,  "Intake VVT closed loop Target",	1
+	table = vvtTable1Tbl,  vvtTable1Map,  "Gear shift timing multiplier",	1
 		xBins		= vvtTable1RpmBins,  RPMValue
 		yBins		= vvtTable1LoadBins,  fuelingLoad
 		zBins		= vvtTable1
 
-	table = vvtTable2Tbl,  vvtTable2Map,  "Exhaust VVT closed loop Target",	1
+	table = vvtTable2Tbl,  vvtTable2Map,  "Gear shift timing cut",	1
 		xBins		= vvtTable2RpmBins,  RPMValue
 		yBins		= vvtTable2LoadBins,  fuelingLoad
 		zBins		= vvtTable2
 
+	table = gearShiftEtbDropTbl,  gearShiftEtb,  "Gear shift ETB drop",	1
+		xBins		= vvtTable1RpmBins,  RPMValue
+		yBins		= vvtTable1LoadBins,  TPSValue
+		zBins		= gearShiftEtbDrop
 
 	table = scriptTable1Tbl,  scriptTable1Map,  "Script Table #1",	1
 		xBins		= scriptTable1RpmBins,  RPMValue
@@ -1368,6 +1388,14 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 ;		gridHeight  = 2.0
 		gridOrient  = 250,	0, 340 ; Space 123 rotation of grid in degrees.
 		upDownLabel = "(Later)", "(Sooner)"
+		
+	table = pedalToTpsTbl2,  pedalToTpsMap2,  "ETB Pedal to TPS #2",	1
+		xBins		= pedalToTpsRpmBins,  RPMValue
+		yBins		= pedalToTpsPedalBins,  throttlePedalPosition
+		zBins		= pedalToTpsTable2
+;		gridHeight  = 2.0
+		gridOrient  = 250,	0, 340 ; Space 123 rotation of grid in degrees.
+		upDownLabel = "(Later)", "(Sooner)"
 
 	table = throttle2TrimTbl, throttle2TrimMap,  "ETB #2 Trim",	1
 		xBins		= throttle2TrimRpmBins,  RPMValue
@@ -1590,6 +1618,7 @@ gaugeCategory = Debug
 gaugeCategory = Sensors - Basic
 	RPMGauge			= RPMValue,			"RPM - engine speed",		"RPM",		0, {rpmHardLimit + 2000},	200, {cranking_rpm}, {rpmHardLimit - 500},  {rpmHardLimit},	0,	0
 	CLTGauge			= coolant,		"Coolant temp",		"C",		-40,	140,	-15,		1,		95,	110,	1,	1
+	oilTempGauge		= oilTemp,		"Oil temp",		"C",		-40,	150,	-15,		1,		105,	115,	1,	1
 	IATGauge			= intake,	"Intake air temp",		"C",		-40,	140,	-15,		1,		95,	110,	1,	1
 	afr1Gauge			= AFRValue, @@GAUGE_NAME_AFR@@,			"",		10,	19.4,		12,	13,		15,	16,	2,	2
 	afr2Gauge			= AFRValue2, @@GAUGE_NAME_AFR2@@,		"",		10,	19.4,		12,	13,		15,	16,	2,	2
@@ -1879,6 +1908,7 @@ gaugeCategory = GPPWM Outputs
 	indicator =				{ clutchUpState },		"No clutch Up",			"Clutch Up",  white,  black,	red,  black@@if_ts_show_clutch_up
 	indicator =				{ clutchDownState },		"No clutch down",		"Clutch down",  white,  black, yellow,  black@@if_ts_show_clutch_down
 	indicator =				{ brakePedalState },			"No braking",		"Brake down",  white,  black,	red,  black@@if_ts_show_brake_pedal_indicator
+	indicator =				{ etbPedalTargetSwitchState },	"ETB map #1",		"ETB map #2",  white,  black,	red,  black
 	indicator =				{ acButtonState },		"AC Switch off",		"AC Switch on",  white,  black,	blue,  white@@if_ts_show_air_conditioning
 	indicator =					{ m_acEnabled },		"AC Relay off",		"AC Relay on",  white,  black,	blue,  white@@if_ts_show_air_conditioning
 	indicator =			{ isIdleClosedLoop },			"Not idling",				"Idling",  white,  black,  green,  black
@@ -1939,6 +1969,7 @@ menuDialog = main
 
 		groupMenu = "Limits and protection", {1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		  groupChildMenu = limitsAndFallback,		"Limits and fallbacks"
+		  groupChildMenu = limitsAndFallbackCenter, "Temperature based RPM Limits"
 		  groupChildMenu = oilPressureProtection,		"Oil pressure protection"
 			groupChildMenu = lambdaProtection,		"Lambda protection", 0, { isInjectionEnabled }
 
@@ -2018,6 +2049,7 @@ menuDialog = main
 
 		subMenu = cltFuelCorrCurve,			"CLT multiplier", 0, {isInjectionEnabled == 1}
 		subMenu = iatFuelCorrCurve,			"IAT multiplier", 0, {isInjectionEnabled == 1}
+		subMenu = egtFuelCorrCurve,			"EGT multiplier", 0, {isInjectionEnabled == 1}
 		subMenu = fuelClosedLoopDialog,	"Closed loop fuel correction", 0, {isInjectionEnabled == 1}
 		subMenu = coastingFuelCutControl,	"Deceleration fuel cutoff (DFCO)", 0, {isInjectionEnabled == 1}
 		subMenu = std_separator
@@ -2106,8 +2138,6 @@ menuDialog = main
 		subMenu = idleAdvanceCurve,			"Idle Ignition advance", 0, {useSeparateAdvanceForIdle == 1}
 
 	menu = "&Advanced"
-		subMenu = smLaunchControl,				@@smLaunchControl_NAME@@
-		subMenu = ShiftTorqueReductionDialog,	"Shift Torque Reduction (Flat Shift)"
 		subMenu = NitrousControlDialog,			"Nitrous Control"
 		subMenu = ignitionCylExtra,				"Cylinder offsets", 0@@if_ts_show_odd_fire
 
@@ -2144,12 +2174,11 @@ menuDialog = main
 		subMenu = etbDialog,				"Electronic throttle body", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
 		subMenu = etbTpsBiasCurve,			"ETB bias curve (feed forward)", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb_bias_curve
 		subMenu = pedalToTpsTbl,			@@pedalToTpsTbl_NAME@@ @@if_ts_show_etb
+		subMenu = pedalToTpsTbl2,			@@pedalToTpsTbl2_NAME@@ @@if_ts_show_etb
 		subMenu = throttle2TrimTbl,			"ETB #2 Trim", { tps2_1AdcChannel != @@ADC_CHANNEL_NONE@@ } @@if_ts_show_tps2
 
 		subMenu = std_separator@@if_ts_show_vvt_output
 		subMenu = vvtPidDialog,				"VVT outputs and PID", { vvtMode1 != @@vvt_mode_e_VVT_INACTIVE@@ }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_vvt_output
-		subMenu = vvtTable1Tbl,				@@VVT1_TARGET_NAME@@,  { vvtMode1 != @@vvt_mode_e_VVT_INACTIVE@@ && vvtPins1 != 0 }@@if_ts_show_vvt_output
-		subMenu = vvtTable2Tbl,				"VVT exhaust target", { vvtMode2 != @@vvt_mode_e_VVT_INACTIVE@@ && vvtPins2 != 0 }@@if_ts_show_exhaust_vvt
 
 		subMenu = std_separator
 		subMenu = auxInputsDialog,			"Lua Analog Inputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
@@ -2183,6 +2212,20 @@ menuDialog = main
 		subMenu = pcPerShiftDialog,		"Line Pressure Per Shift (alpha)"@@if_ts_show_tcu
 		subMenu = 32Dialog,			"3-2 Shift Solenoid Percent by Speed (alpha)"@@if_ts_show_tcu
 		subMenu = rangeMatrixDialog,		"Range Selector Input Matrix (alpha)"@@if_ts_show_tcu
+		
+	menu = "Sport"
+		subMenu = smLaunchControl,		"Launch Control"
+		subMenu = ShiftTorqueReductionDialog,	"Flat Shift"
+		subMenu = std_separator
+		subMenu = tractionEtbTableTbl,		"Traction Control ETB Drop"@@if_ts_show_etb
+		subMenu = tractionTimingTableTbl,	"Traction Control Timing Adjustment"
+		subMenu = tractionIgnitionSkipDialog,	"Traction Control Spark Skip"
+		subMenu = std_separator
+		subMenu = antiLagDialog,                "Anti Lag System (ALS)"
+	menu = "5HP24"
+		subMenu = vvtTable1Tbl,			"Gear shift timing multiplier"
+		subMenu = vvtTable2Tbl,			"Gear shift timing spark skip"
+		subMenu = gearShiftEtbDropTbl,		"Gear shift ETB drop"
 
 	menu = "&Sensors", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		groupMenu = "Chassis sensors"
@@ -2292,11 +2335,6 @@ menuDialog = main
 		@@BOARD_MENU_FROM_FILE@@
 		subMenu = std_separator
 
-		subMenu = tractionEtbTableTbl,    "Traction Control ETB Drop"@@if_ts_show_etb
-		subMenu = tractionTimingTableTbl,    "Traction Control Timing Adjustment"
-		subMenu = tractionIgnitionSkipDialog,    "Traction Control Skip Ignition"
-		subMenu = std_separator
-
 		subMenu = hipFunction,				"HIP9011 settings (knock sensor)" @@if_ts_show_hip9011
 
 		subMenu = kLineDialog,              "K-Line"@@if_ts_show_k_line
@@ -2304,7 +2342,6 @@ menuDialog = main
 		subMenu = parkingLot2,				"Experimental 2"@@if_ts_show_experimental
 		subMenu = parkingLot3,				"Experimental 3"@@if_ts_show_experimental
 		subMenu = harleyAcr,                @@HD_MENU_NAME@@@@if_ts_show_hd
-		subMenu = antiLagDialog,                "Anti-Lag ALS"
 		subMenu = rotaryDialog,			"Rotary"@@if_ts_show_rotary
 		subMenu = throttleEffectiveArea, "Throttle effective area", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
@@ -3891,6 +3928,10 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Use coasting idle table",	useIacTableForCoasting
 		field = "Dashpot coasting-to-idle Hold time", iacByTpsHoldTime
 		field = "Dashpot coasting-to-idle Decay time", iacByTpsDecayTime
+		
+	dialog = idleExtraTCU, "Automatic Transmission Idle Adder"
+		field = "Gear engage idle adder", gearEngageIdleAdder
+		field = "Ramp down time", gearEngageRampDown
 
 	dialog = idleSettings, "", yAxis
 		field = "Idle control mode",					idleMode
@@ -3903,6 +3944,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = idleOpenLoop
 		panel = idlePidSettings, { idleMode == @@idle_mode_e_IM_AUTO@@ }
 		panel = idleExtra
+		panel = idleExtraTCU
 
 	dialog = idleTimingPidCorrDialog, "", yAxis
 		field = ""
@@ -4468,6 +4510,12 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = fuelStrategyPanel, "Fuel"
 		field = "!https://rusefi.com/s/fuel"
 		field = "Fuel strategy",						fuelAlgorithm
+		
+	dialog = dynoModePanel, "Dyno mode"
+		field = "Dyno mode enabled",					dynoMode
+		field = "Dyno mode RPM",						dynoModeTargetRpm, { dynoMode }
+		field = "Dyno mode TPS",						dynoModeTargetTps, { dynoMode }
+		field = "Dyno mode Load",						dynoModeTargetLoad, { dynoMode }
 
 	dialog = debugging, "Debug"
 		field = "!https://rusefi.com/s/debugmode"
@@ -4481,8 +4529,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = limitsSettings, "Limits"
 		field = "Cut fuel on RPM limit",				cutFuelOnHardLimit
 		field = "Cut spark on RPM limit",				cutSparkOnHardLimit
-		field = "Use CLT-based RPM limit curve",		useCltBasedRpmLimit, { cutFuelOnHardLimit || cutSparkOnHardLimit }
-		field = "RPM hard limit",						rpmHardLimit, { (cutFuelOnHardLimit || cutSparkOnHardLimit) &&  !useCltBasedRpmLimit }
+		field = "RPM hard limit",						rpmHardLimit, { (cutFuelOnHardLimit || cutSparkOnHardLimit) }
 		field = "RPM limit hysteresis",					rpmHardLimitHyst
 		field = "Boost cut pressure",					boostCutPressure
 		field = "Boost cut pressure hysteresis",		boostCutPressureHyst
@@ -4506,18 +4553,15 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = limitsAndFallbackLeft
 		panel = limitsSettings
-		panel = softRpmLimitSettings, West, { (cutFuelOnHardLimit || cutSparkOnHardLimit) &&  !useCltBasedRpmLimit }
+		panel = softRpmLimitSettings, West, { (cutFuelOnHardLimit || cutSparkOnHardLimit) }
 		panel = etbLimits
 
-	dialog = oilPressureProtection, "Oil pressure protection"
-		field = "Minimum oil pressure after start",		minOilPressureAfterStart
-
-    dialog = limitsAndFallbackCenter, "CLT-based RPM Limit"
+    dialog = limitsAndFallbackCenter, "Temperature based RPM Limits"
         panel = cltRevLimitCurve
+		panel = oilTempRevLimitCurve
 
 	dialog = limitsAndFallback, "Limits and fallbacks", border
 	    panel = limitsAndFallbackLeft, West
-   		panel = limitsAndFallbackCenter, Center, { (cutFuelOnHardLimit || cutSparkOnHardLimit) && useCltBasedRpmLimit }
 
 ;			Engine->Base Engine Settings
 	dialog = engineChars, "Base Engine Settings"
@@ -4526,6 +4570,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = baseEngineConfig
 		panel = engineMetadata, {1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		panel = fuelStrategyPanel@@if_ts_show_fuel_strategy
+		panel = dynoModePanel
 		panel = debugging@@if_ts_show_debug_mode
 
 	dialog = crankingFuel, "Fuel"
@@ -4918,6 +4963,9 @@ dialog = tcuControls, "Transmission Settings"
 		field = "PWM Frequency",						etbFreq
 		field = "Minimum ETB position",					etbMinimumPosition
 		field = "Maximum ETB position",					etbMaximumPosition
+		field = "ETB pedal target map switch",	    	etbPedalTargetPin
+		field = "ETB pedal target map switch signal",	etbPedalTargetPinInverted
+		field = "ETB pedal target map switch mode",		etbPedalTargetPinMode
 		field = ""
 		field = "Jam detection error max",				etbJamDetectThreshold, { etbJamDetectThreshold == 0 || etbJamTimeout != 0 }@@if_ts_show_jam_detection
 		field = "Jam detection timeout period",			etbJamTimeout, { etbJamDetectThreshold != 0 }@@if_ts_show_jam_detection
@@ -5157,7 +5205,7 @@ dialog = tcuControls, "Transmission Settings"
 		panel = smLaunchControlWest, West
 		panel = launch_control_stateDialog, East
 
-	dialog = antiLagDialog, "AntiLag Settings"
+	dialog = antiLagDialog, "Anti Lag System"
 	    field = "Enable AntiLag",                   antiLagEnabled
 		field = "Activation Mode",          	    antiLagActivationMode
 		field = "Switch Input",                     ALSActivatePin,  {antiLagActivationMode == @@antiLagActivationMode_e_SWITCH_INPUT_ANTILAG@@ && antiLagEnabled == 1}
